registration box alignment and fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -130,6 +130,7 @@
 
   .registerCard {
       top: 10%;
+      text-align: left;
   }
 
   .registerCardSuccess {
